# comfy-router

./: Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
src/: config.rs  lib.rs  main.rs  state.rs
src/cluster/: mod.rs
src/download/: manage.rs  mod.rs  state.rs  task.rs  utils.rs
src/routes/: cluster.rs  download.rs  mod.rs  workflow.rs
src/workflow/: fetch.rs  message.rs  mod.rs  payload.rs  record.rs  task.rs
src/workflow/payload/: flux.rs  mod.rs  sd15.rs  sdxl.rs
src/workflow/task/: executor.rs  impls.rs  mod.rs
web/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.tsbuildinfo
web/src/: App.tsx
web/src/components/: ClusterNode.tsx
web/src/lib/: api.ts
web/src/pages/: index.tsx
