[package]
name = "comfy-router"
version = "0.1.3"
edition = "2021"

[dependencies]
anyhow = "1.0.87"
axum = { version = "0.7.5", features = ["macros"] }
dotenv = "0.15.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tower-http = { version = "0.5.2", features = ["trace", "normalize-path", "add-extension", "cors", "auth"] }
tower = "0.4.13"
tracing-subscriber = "0.3.18"
uuid = { version = "1.10.0", features = ["v4"] }
url = { version = "2.5.2", features = ["serde"] }
reqwest = { version = "0.12.7", default-features = false, features = [
    "charset",
    "http2",
    "macos-system-configuration",
    "rustls-tls",
    "json",
    "stream",
] }
futures-util = "0.3.30"
rust-embed = "8.5.0"
axum-embed = "0.1.0"
tokio-tungstenite = "0.23.1"
thiserror = "1.0.63"
